# duolingo-memcode-exporter

./: Readme.md  exporter.py  pyproject.toml
